--- a/pom.xml
+++ b/pom.xml
@@ -47,9 +47,9 @@
   <issueManagement />
   <distributionManagement>
     <repository>
-      <id>pentaho</id>
-      <name>Pentaho repository</name>
-      <url>http://repository.pentaho.org/artifactory/repo</url>
+      <id>zaihui</id>
+      <name>zaihui repository</name>
+      <url>https://nexus.kezaihui.com/repository/maven-releases</url>
     </repository>
   </distributionManagement>
   <properties>
@@ -114,17 +114,17 @@
     <dependency>
       <groupId>eigenbase</groupId>
       <artifactId>eigenbase-xom</artifactId>
-      <version>1.3.1</version>
+      <version>1.3.2</version>
     </dependency>
     <dependency>
       <groupId>eigenbase</groupId>
       <artifactId>eigenbase-properties</artifactId>
-      <version>1.1.2</version>
+      <version>1.1.3</version>
     </dependency>
     <dependency>
       <groupId>eigenbase</groupId>
       <artifactId>eigenbase-resgen</artifactId>
-      <version>1.3.1</version>
+      <version>1.3.2</version>
     </dependency>
     <dependency>
       <groupId>org.olap4j</groupId>
@@ -201,6 +201,51 @@
       <artifactId>mockito-all</artifactId>
       <version>1.8.5</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>biz.aQute</groupId>
+      <artifactId>bnd</artifactId>
+      <version>2.3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>eigenbase</groupId>
+      <artifactId>eigenbase-xom</artifactId>
+      <version>1.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>asm</groupId>
+      <artifactId>asm-commons</artifactId>
+      <version>3.1</version>
+    </dependency>
+    <dependency>
+      <groupId>asm</groupId>
+      <artifactId>asm-util</artifactId>
+      <version>3.1</version>
+    </dependency>
+    <dependency>
+      <groupId>retroweaver</groupId>
+      <artifactId>retroweaver</artifactId>
+      <version>2.0.7</version>
+    </dependency>
+    <dependency>
+      <groupId>retroweaver</groupId>
+      <artifactId>retroweaver-rt</artifactId>
+      <version>2.0.7</version>
+    </dependency>
+    <dependency>
+      <groupId>hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>1.8.0.10</version>
+    </dependency>
+    <dependency>
+      <groupId>pentaho</groupId>
+      <artifactId>mondrian-data-foodmart</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>pentaho</groupId>
+      <artifactId>mondrian-data-foodmart-json</artifactId>
+      <version>0.1</version>
     </dependency>
   </dependencies>
   <repositories>
