--- a/mondrian-server/pom.xml
+++ b/mondrian-server/pom.xml
@@ -11,5 +11,16 @@
 
     <artifactId>mondrian-server</artifactId>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
