--- a/mondrian-server/pom.xml
+++ b/mondrian-server/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>mondrian</artifactId>
-        <groupId>com.kezaihui</groupId>
+        <groupId>com.kezaihui.mondrian</groupId>
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
