--- a/mondrian-tui/pom.xml
+++ b/mondrian-tui/pom.xml
@@ -11,5 +11,17 @@
 
     <artifactId>mondrian-tui</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.kezaihui.mondrian</groupId>
+            <artifactId>mondrian-xmla</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.4</version>
+        </dependency>
+    </dependencies>
 </project>
