--- a/mondrian-web/pom.xml
+++ b/mondrian-web/pom.xml
@@ -12,4 +12,24 @@
     <artifactId>mondrian-web</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>com.kezaihui.mondrian</groupId>
+            <artifactId>mondrian-engine</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.0</version>
+        </dependency>
+    </dependencies>
 </project>
