--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,10 @@
     <modules>
         <module>mondrian-engine</module>
         <module>mondrian-server</module>
+        <module>mondrian-test</module>
+        <module>mondrian-web</module>
+        <module>mondrian-xmla</module>
+        <module>mondrian-tui</module>
     </modules>
     <name>mondrian</name>
     <description>Mondrian OLAP engine.</description>
@@ -42,6 +46,35 @@
         <servlet-api.version>2.4</servlet-api.version>
         <commons-lang.version>2.4</commons-lang.version>
         <xmlunit.version>1.1</xmlunit.version>
+        <testcontainers.version>1.8.0</testcontainers.version>
+        <project.version.minor>000</project.version.minor>
+        <xml-apis.version>2.0.2</xml-apis.version>
+        <driver.version>${project.version}</driver.version>
+        <project.version.major>8</project.version.major>
+        <schema.version>3</schema.version>
+        <driver.name>Mondrian olap4j driver</driver.name>
+        <driver.version.minor>${project.version.minor}</driver.version.minor>
+        <vendor>Pentaho</vendor>
+        <driver.version.major>${project.version.major}</driver.version.major>
+        <mysql-connector-java.version>5.1.39</mysql-connector-java.version>
+        <maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>testcontainers</artifactId>
+                <version>${testcontainers.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>mysql</artifactId>
+                <version>${testcontainers.version}</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
